--- a/templates/index.html
+++ b/templates/index.html
@@ -5,8 +5,52 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Emo-Detect</title>
+    <link rel="stylesheet" type="text/css" href="../static/style.css">
 </head>
 <body>
-    
+    <div id="header">
+		<h1>Emotion Detection Using <span>Convolutional Neural Network</span></h1>
+	</div>
+
+    <div class="row">
+		<div class="col" style="background-color: #232F34;">
+			<div><span>Upload an Image!</span></div>
+			<label for="image" class="btn1 b2">UPLOAD</label>
+  			<input id="image" style="visibility:hidden; width: 0" type="file" accept="image/png, image/jpeg">
+  			<button class="btn1 b2" id="pred-btn">PREDICT</button>
+			<div class="pic"><img style="border:5px solid;" id="display-img" src="{{url_for("static", filename="upload.jpg")}}"/></div>
+			<p>I think it's a <span id="prediction-img" class="pred">...</span></p>
+			<div class="ins" style="background-color: #11e8f7;">Upload an image...and see what the model thinks about it!</div>
+		</div>
+	</div>
+
+	<script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+	<script type="text/javascript" src="../static/sketch.js""></script>
+	<script>
+		var base64Image;
+
+		$("#image").change(function() {
+			var reader = new FileReader();
+			reader.onload = function(e){
+				var dataURL = reader.result;
+				$("#display-img").attr("src",dataURL);
+				base64Image = dataURL.replace("data:image/png;base64,","");
+				console.log(base64Image);
+			}
+			reader.readAsDataURL($("#image")[0].files[0]);
+			$("#prediction-img").text("...");
+		})
+
+		$("#pred-btn").click(function(event){
+		 	var message = {
+		 		image : base64Image
+		 	}
+		 	console.log(message);
+		 	$.post("http://127.0.0.1:5000/predict-image/", JSON.stringify(message), function(response){
+		 		$("#prediction-img").text(response.predictionImg);
+		 	})
+		 })
+
+	</script>
 </body>
 </html>
