--- a/static/style.css
+++ b/static/style.css
@@ -1,8 +1,7 @@
 body {
   margin: 0;
-  height: 100%;
+  height: 100vh;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-  color: #ff5555;
 }
 
 button:focus {
@@ -45,6 +44,7 @@ html {
   flex: 50%;
   font-size: 20px;
   padding: 35px 0 0 0;
+  box-shadow: 5px 10px #888888;
 }
 
 .pic {
@@ -57,6 +57,13 @@ html {
   height: 280px;
   width: 280px;
   border-radius: 5px;
+  transition: 0.5s all ease-in;
+}
+
+#display-img:hover {
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px,
+    rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px,
+    rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
 }
 
 canvas {
@@ -64,14 +71,25 @@ canvas {
 }
 
 .ins {
-  font-size: 18px;
+  font-size: 22px;
   background-color: #fff;
   border-radius: 5px;
   color: #fff;
   text-align: center;
   width: 50%;
-  padding: 10px;
-  margin: 0 auto;
+  padding: 20px;
+  margin: 40px auto;
+  border-radius: 25px;
+  transition: 0.4s all ease-in;
+}
+.ins:hover {
+  transform: scale(1.1);
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px,
+    rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px,
+    rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+}
+
+.ins:hover {
 }
 
 .btn1 {
@@ -81,15 +99,24 @@ canvas {
   /*color: #4A6572;*/
   padding: 5px 20px;
   text-align: center;
-  margin: 10px 30px 15px 30px;
+  margin: 50px 30px 50px 30px;
   text-decoration: none;
   display: inline-block;
   font-size: 18px;
+  transition: 0.2s ease-in all;
+  cursor: pointer;
 }
 
 .btn1:hover {
   box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24),
     0 17px 50px 0 rgba(0, 0, 0, 0.19);
+  background-color: #94e9be; /*#4CAF50;*/
+  transform: scale(1.1);
+  border-radius: 20px;
+}
+
+.btn1:active {
+  transform: scale(0.8);
 }
 
 .pred {
